# dust-wormhole-bridge

dust-bridging/: README.md
dust-bridging/evm/: .gitignore  Makefile  README.md  foundry-test.toml  foundry.toml  package.json  tsconfig.json
dust-bridging/evm/env/: testing.env
dust-bridging/evm/forge-test/: DeBridge.sol  DeBridge.t.sol  DustWormholeERC721.t.sol  MockDust.sol  TestHelpers.sol  WormholeERC721.t.sol  y00tsBridge.t.sol
dust-bridging/evm/modules/ERC5058/: ERC5058Upgradeable.sol  IERC5058Upgradeable.sol
dust-bridging/evm/modules/ERC5192/: IERC5192.sol
dust-bridging/evm/modules/opensea/: DefaultOperatorFiltererUpgradeable.sol
dust-bridging/evm/modules/wormhole/: WormholeSimulator.sol
dust-bridging/evm/script/: deploy_contracts.sol  deploy_y00tsV3.sol  mint_with_vaa.sol  upgrade_degods_devnet.sol  upgrade_degods_mainnet.sol  upgrade_y00ts_devnet.sol  upgrade_y00ts_mainnet.sol
dust-bridging/evm/shell-scripts/: run_integration_tests.sh
dust-bridging/evm/src/nft/: BaseWormholeBridgedNft.sol  DeBridge.sol  DeGods.sol  DeGodsV2.sol  DummyERC721EnumerableUpgradeable.sol  DustWormholeERC721Upgradeable.sol  (+10 more)
dust-bridging/evm/ts/: abi.ts  listenMints.ts
dust-bridging/solana/: .gitignore  Anchor.toml  Makefile  README.md  package.json  solana_check.sh  testing.env  tsconfig.json
dust-bridging/solana/dependencies/: .gitignore  Makefile  README.md  build_mpl_token_metadata.sh  build_wormhole_repo_bpfs.sh  wormhole_checksum.txt
dust-bridging/solana/programs/dust_bridging/: Cargo.toml
dust-bridging/solana/programs/dust_bridging/src/: anchor_metadata.rs  error.rs  instance.rs  instructions.rs  lib.rs  state.rs
dust-bridging/solana/programs/dust_bridging/src/instructions/: admin.rs  burn_and_send.rs  initialize.rs
dust-bridging/solana/ts/: main.ts
(+16 files in other folders)
