[package]
name = "dust-bridging"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dust_bridging"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.26.0" }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features = ["mainnet"] }
metaplex-anchor-sdk = { path = "../../modules/metaplex-anchor-sdk"}
