[package]
name = "dust-bridging"
version = "1.0.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dust_bridging"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0" }
anchor-spl = { version = "0.26.0" }
mpl-token-metadata = { version="1.9.0", features = [ "no-entrypoint" ] }
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features = ["solana-devnet"] }

